--- a/ACID_RAIN_ReservedVER/ACID_RAIN_ReservedVER/ACID_RAIN_ReservedVER.vcxproj
+++ b/ACID_RAIN_ReservedVER/ACID_RAIN_ReservedVER/ACID_RAIN_ReservedVER.vcxproj
@@ -147,7 +147,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\ACID_RAIN_ReservedVER.\ACID_RAIN_ReservedVER.\ACID_RAIN_ReservedVER.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
