--- a/ACID_RAIN_ReservedVER/ACID_RAIN_ReservedVER/ACID_RAIN_ReservedVER.vcxproj.filters
+++ b/ACID_RAIN_ReservedVER/ACID_RAIN_ReservedVER/ACID_RAIN_ReservedVER.vcxproj.filters
@@ -18,9 +18,18 @@
     <ClCompile Include="main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="game.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="rank.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="game.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
